infrastructure/istio-gateway/istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: public-gateway
  namespace: istio-system
spec:
  selector:
    istio: gateway
  servers:
    - port:
        number: 39707
        name: http
        protocol: HTTP
      hosts:
        - '*'
