infrastructure/istio-gateway/api-routes.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kind-local-k8s
  namespace: istio-system
spec:
  hosts:
  - localhost
  gateways:
  - public-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: podinfo.default.svc.cluster.local
        port:
          number: 8080
